[gd_scene load_steps=3 format=3 uid="uid://da2unl4ljf3mb"]

[ext_resource type="Texture2D" uid="uid://bgan4hfednou8" path="res://icon.svg" id="1_5xvu6"]
[ext_resource type="Script" path="res://Objects/Scripts/skill_node.gd" id="2_sctuo"]

[node name="SkillButton" type="TextureButton"]
self_modulate = Color(0.392157, 0.392157, 0.392157, 1)
z_index = 1
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("1_5xvu6")
script = ExtResource("2_sctuo")

[node name="SkillLevel" type="Label" parent="."]
layout_mode = 0
offset_top = 94.0
offset_right = 128.0
offset_bottom = 124.0
text = "0/3"

[node name="SkillBranch" type="Line2D" parent="."]
top_level = true
default_color = Color(0.783523, 0.783523, 0.783523, 1)

[connection signal="pressed" from="." to="." method="_on_pressed"]
